Loverace_app/infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: loverace
  labels:
    app: loverace
